# teorem_proving_thesis

./: pyproject.toml  пейпери.ipynb
scripts/: scrape_papers.py
